# bazel-databinding-samples

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  bazel-databinding-samples.sublime-project  maven_deps.bzl  maven_install.json
BasicSample/app/: BUILD.bazel
BasicSample/app/src/main/: AndroidManifest.xml
BasicSample/app/src/main/java/com/example/android/databinding/basicsample/data/: EnumSelection.kt  ProfileObservableViewModel.kt
BasicSample/app/src/main/java/com/example/android/databinding/basicsample/ui/: MainActivity.kt  ObservableFieldActivity.kt  ViewModelActivity.kt
BasicSample/app/src/main/java/com/example/android/databinding/basicsample/util/: BindingAdapters.kt  BindingConverters.kt
BasicSample/app/src/main/res/layout/: item_selection_option.xml  observable_field_profile.xml
TwoWaySample/app/src/main/java/com/example/android/databinding/twowaysample/ui/: BindingAdapters.kt
tools/android_repositories/: defs.bzl
