load("@grab_bazel_common//tools/databinding:databinding.bzl", "kt_db_android_library")

kt_db_android_library(
    name = "lib",
    srcs = glob(["src/main/java/**/*.kt"]),
    custom_package = "com.example.android.databinding.basicsample.lib",
    manifest = "src/main/AndroidManifest.xml",
    resource_files = glob(["src/main/res/**"]),
    tags = [
        "manual",
        "kt_abi_plugin_incompatible",
    ],
    deps = [
        "@maven//:androidx_activity_activity_ktx",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_core_core",
        "@maven//:androidx_databinding_databinding_ktx",
        "@maven//:androidx_lifecycle_lifecycle_livedata_ktx",
        "@maven//:androidx_lifecycle_lifecycle_runtime_ktx",
        "@maven//:androidx_lifecycle_lifecycle_viewmodel_ktx",
    ],
)

android_binary(
    name = "app",
    custom_package = "com.example.android.databinding.basicsample",
    manifest = "src/main/AndroidManifest.xml",
    manifest_values = {
        "applicationId": "com.example.android.databinding.basicsample",
    },
    enable_data_binding = True,
    deps = [
        ":lib",
        "@maven//:androidx_annotation_annotation",
        "@maven//:androidx_databinding_databinding_adapters",
        "@maven//:androidx_databinding_databinding_common",
        "@maven//:androidx_databinding_databinding_runtime",
    ]
)
